# youtube-briefing

./: .env.example  .gitignore  README.md  TODOS.md  astro.config.mjs  brainstorm-conversation.md  config.example.yaml  config.yaml  layout-comparison.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: pages.yml  pipeline.yml  test.yml
data/briefings/: 2025-11-27-parkjonghoon-KLyymjcK_2M.json  2025-11-28-parkjonghoon-pUFQI_tGlm4.json  2025-12-01-parkjonghoon-tl_qNPP6W74.json  2025-12-04-parkjonghoon-lj8Ki06SsEc.json  2025-12-06-parkjonghoon-8KqUsGRzg_U.json  2025-12-09-parkjonghoon-yRd3_RGC1Oc.json  2025-12-17-parkjonghoon-GRIoEFc3hu8.json  2025-12-20-parkjonghoon-jFOf90qHrZY.json  2025-12-21-parkjonghoon-bDUmRdBUNzU.json  2026-03-10-shuka-by5EGhYFuH4.json  (+401 more)
docs/: fork-readiness-spec.md  task-1-gitignore-user-data.md
pipeline/: __init__.py  config.py  logging_config.py  models.py  run.py
scripts/: audit-summary-shape.py  commit-and-push.sh  eval-golden-summaries.py  export-schema.py  install-cron.sh  install-launchd.sh  re-summarize-all.sh  re-summarize-from-cache.py  resolve-channel-ids.py  select-golden-set.py
tests/: test_audit_summary_shape.py  test_config.py  test_context_builder.py  test_discovery.py  test_eval_golden_summaries.py  test_json_store.py  test_logging_config.py  test_models.py  test_naver_blog.py  test_resummarize.py  test_run.py  test_select_golden_set.py  test_summarizers.py  test_summary_contract.py  test_transcript_extractor.py
(+28 files in other folders)
